--- a/faq_payment.qmd
+++ b/faq_payment.qmd
@@ -18,11 +18,14 @@ A: Contact our team with your address and we can provide a replacement. This doe
 **Q: How much can I expect to earn?**  
 A: Participants may receive up to $120 a month and $1560 over the 12-month course of the study. The precise amount may vary due to the length of each month, for instance, one may be compensated less for February than for March. Specifically, one will earn: $1.25 per daily survey, $10 per monthly survey, and $50 a month towards the payment of cell service if phone log, SMS, and GPS data are shared. Participants will also earn $5 for each type of data shared and up to two $5 bonuses per month if at least 6 daily surveys are completed a week. This comes to about $70 for tasks and bonuses and $50 for the cell phone bill. Participants also receive compensation for the three calls they have with STAR Study Staff, being their initial onboarding session, the one-week follow-up, and a debrief at the end of the study. These are compensated at $20, $10, and $10, respectively.  
 
-**Q: What do I do with the W-9?**  
-A: Please mail us your completed W-9 using the instructions and pre-addressed envelope included in your welcome package, or take a clear photo and text it to our hotline number (608-571-3810). If you decide to take a photo, please give us a call so we can collect your SSN over the phone. Note that we will not be able to issues your monthly payments until we have received your W-9.  
+**Q: How do I submit my W-9?**  
+A: Please fill in the information requested at the secure docusign link. You can find this link in the initial welcome text and DM we sent via STAR.
+
+**Q: What if I don't have a social security number or don't want to share it?"**
+A: You will need to provide a social security number or employee identification number (EIN) to participate.
 
 **Q: Why do I have to complete a W-9?**  
-A: Any earnings over $600 in one tax year must be reported to the IRS, per federal law. We will not be able to issue your monthly payments until your W-9 is received.  
+A: Any earnings over $600 in one tax year must be reported to the IRS, per federal law. Since you stand to earn over the qualifying amount by participating in this research, will not be able to issue payment until your W-9 is received. Please note that this may affect your eligibility for certain benefits and/or the amount of tax you owe.
 
 
 
